tester_ft/log/compile_error_vec_21.txt
-VECTOR ASSIGNMENT OP TEST-

./tmp/outfile_vec_21.cpp:38:48: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1_r.begin(),v1_r.end(),v2_r.begin()))
                                                        ~~~~ ^
1 error generated.
